--- a/Artykuly/css/style.scss
+++ b/Artykuly/css/style.scss
@@ -1,47 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-* {
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-}
-
-html {
-  font-size: 10px;
-  text-rendering: optimizeLegibility;
-}
-
-body {
-  background: #fffaed;
-}
-
-a {
-  text-decoration: none;
-  background: none;
-  color: #e0c08e;
-}
-
-a:active {
-  background: none;
-  outline: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-hr {
-  width: 100%;
-  height: 4.5px;
-  background: #e0c08e;
-  margin-bottom: 2.5vh;
-  margin-top: -0.25vh;
-  border:0;
-  border-radius: 3px;
-  outline: none;
-}
-
-img, embed, object, video {
-  max-width: 100%;
-}
-
 // ------------------------------- Headlines
 
 h1 {
@@ -57,7 +13,7 @@ h1.big {
   justify-self: center;
   align-self: flex-start;
   line-height: 1.25;
-  margin-bottom: 1vh;
+  margin-top: 2.5vh;
 }
 
 h1.small {
@@ -77,8 +33,9 @@ h2 {
   font-family: 'Vollkorn';
   font-weight: 900;
   color: #462012;
-  font-size: 2.5rem;
-  margin-top: 6vh;
+  font-size: 3rem;
+  margin-top: 3vh;
+  margin-bottom: 0.5vh;
 }
 
 h3 {
@@ -87,6 +44,7 @@ h3 {
   line-height: 1.5;
   color: #613b33;
   font-size: 1.75rem;
+  margin-top: 3vh;
 }
 
 // ------------------------------- Paragrafs
@@ -99,54 +57,25 @@ p {
 }
 
 p.big {
-  margin-top: 3vh;
-  font-size: 1.75rem;
-  line-height: 1.85;
+  margin-top: 1vh;
+  font-size: 2rem;
+  line-height: 1.7;
   font-weight: 700;
 }
 
 p.small {
   font-weight: 400;
-  font-size: 1.75rem;
-  line-height: 1.85;
+  font-size: 2rem;
+  line-height: 1.75;
   font-family: 'Vollkorn';
   color: #352917;
 }
 
-.vollkorn {
-  font-family: 'Vollkorn';
-  font-size: 1.75rem;
-  line-height: 1;
-}
-
-//quote
-
-q {
-  font-style: italic;
+p.date {
   font-weight: 600;
-  font-size: 1.6rem;
-}
-
-// ------------------------------- Margin
-
-.margin_2 {
-  margin-top: 1vh;
-}
-
-.margin_4 {
-  margin-top: 4vh;
-}
-.margin_8 {
-  margin-top: 8vh;
-}
-
-// ------------------------------- Spine
-
-.flex {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: center;
+  font-size: 2rem;
+  font-family: 'Vollkorn';
+  color: #352917;
 }
 
 // ------------------------------- Menu bar
@@ -157,72 +86,6 @@ q {
   height: 10vh;
   flex-direction: row;
   justify-self: center;
-}
-
-.logo {
-  width: 50%;
-  height: 5vh;
-  background: #e0c08e url(../../img/logo.png) center center no-repeat;
-  background-size: 50%;
-  background-position: center 52.5%;
-  border-radius: 3px;
-  align-self: center;
-  justify-self: flex-start;
-}
-
-.logo:active {
-  background: #dd9b9b url(../../img/logo.png) center center no-repeat;
-  background-size: 50%;
-}
-
-.menu {
-  width: 5vh;
-  height: 5vh;
-  background: #e0c08e url(../../img/menu.png) center center no-repeat;
-  background-size: 50%;
-  align-self: center;
-  margin-left: 2.5vh;
-  border-radius: 3px;
-}
-
-.menu:active {
-  background: #dd9b9b url(../../img/menu.png) center center no-repeat;
-  background-size: 50%;
-
-}
-
-.menu_open {
-  margin-top: 10vh;
-  position: absolute;
-  flex-direction: column;
-  width: 90%;
-  height: 20vh;
-  background: #e0c08e;
-  display: none;
-  justify-content: center;
-  box-shadow: 0 1vh 0 0 #cc9e72;
-}
-
-// ------------------------------- Feed
-
-.feed {
-  width: 90%;
-  display: flex;
-  justify-self: center;
-  flex-direction: column;
-}
-
-.date {
-  height: 2.5vh;
-  margin-top: 1vh;
-  align-self: flex-start;
-  padding-left: 2vh;
-  padding-right: 2vh;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: #e0c08e;
-  border-radius: 3px;
 }
 
 .autor {
@@ -237,56 +100,6 @@ q {
   border-radius: 3px;
 }
 
-// ------------------------------- flash
-
-.flash {
-  height: 3vh;
-  align-self: flex-end;
-  padding-left: 2vh;
-  padding-right: 2vh;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: #e0c08e;
-  border-radius: 3px;
-}
-
-.flash:active {
-  background: #dd9b9b;
-}
-
-.flash_open {
-  width: 45%;
-  margin-left: 45%;
-  height: 34vh;
-  background: #e0c08e;
-  margin-top: 23vh;
-  border-radius: 3px;
-  position: absolute;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.up_button {
-  background: #dd9b9b url(../../img/menu.png) center center no-repeat;
-  background-size: 50%;
-  width: 4vh;
-  height: 4vh;
-  border-radius: 3px;
-  position: fixed;
-  margin-top: 85vh;
-  margin-left: 80%;
-  transition: 0.3s;
-  opacity: 0;
-}
-
-.up_button:active {
-  background: #e0c08e url(../../img/menu.png) center center no-repeat;
-  background-size: 50%;
-}
-
 // ------------------------------- Picture
 
 .picture {
@@ -297,33 +110,19 @@ q {
 
 .picture_big {
   width: 100%;
-  height: 30vh;
+  height: 25vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .picture_in {
   width: 100%;
-  margin-top: 2.5vh;
+  margin-top: 0.5vh;
+  margin-bottom: 2vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
 .contain {
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-// ------------------------------- Footer
-.footer {
-  margin-top: 2.5vh;
-  height: 7.5vh;
-  width: 100%;
-  background: #e0c08e;
-  display: flex;
-  align-items: center;
-}
-
-.footer.big {
-  margin:0;
-  margin-left: 5%;
 }
